<resources>
    <string name="app_name">CovidSituation</string>

    <!-- dialog -->
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니요</string>
    <string name="dialog_setting">설정</string>
    <string name="dialog_check">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_close">닫기</string>

    <!-- splash -->
    <string name="ted_permission_go_to_setting_button_text">설정</string>
    <string name="ted_permission_denied_message">권한이 승인되지 않아 서비스를 실행할 수 없습니다.\n권한설정은 [설정] > [권한]에서 변경하실 수 있습니다.</string>
    <string name="permission_not_agree">권한이 허용되지 않아 서비스를 실행할 수 없습니다.</string>
    <string name="internet_not_connect">네트워크에 연결되어있지 않습니다.</string>
    <string name="version_fail">서버와 접속이 원활하지 않습니다</string>
    <string name="version_error">버전 확인 중 오류가 발생했습니다.</string>
    <string name="play_store">https://play.google.com/store/apps/details?id=com.kakao.talk</string>

    <!-- common sidebar -->
    <string name="side_header_desc">Icon</string>
    <string name="side_header_title">Cosiguk</string>
    <string name="side_contents_notice_title">공지사항</string>
    <string name="side_contents_version_title">버전정보</string>
    <string name="side_contents_intro_title">이용방법</string>
    <string name="pager_previous">이전</string>
    <string name="pager_next">다음</string>
    <string name="pager_close">닫기</string>

    <!-- navigation -->
    <string name="drawer_open">내비게이션 열림</string>
    <string name="drawer_close">내비게이션 닫힘</string>
    <string name="nv_situation_board">상황판</string>
    <string name="nv_news">뉴스</string>
    <string name="nv_vaccine">백신</string>
    <string name="nv_board">게시판</string>

    <!-- situation board -->
    <string name="location_denied_msg">권한이 허용되지 않아 현재 위치 정보를 불러올 수 없습니다.\n설정으로 이동하시겠습니까?</string>
    <string name="location_unknown_loc">"위치" 기능이 비활성화입니다. \n현재 위치 정보를 불러올 수 없습니다.</string>
    <string name="location_goto_setting">설정</string>
    <string name="location_base">서울</string>
    <string name="location_situation_board">코로나 상황판</string>
    <string name="location_vaccine">백신</string>
    <string name="location_news">실시간 뉴스</string>
    <string name="location_board">게시판</string>

    <!-- vaccine -->
    <string name="vc_div">구분</string>
    <string name="vc_first_title">1차접종</string>
    <string name="vc_second_title">2차접종</string>
    <string name="vc_third_title">3차접종</string>
    <string name="vc_daily_total">당일누적</string>
    <string name="vc_daily">전일대비</string>
    <string name="vc_yesterday_total">전일누적</string>
    <string name="vc_hospital_title">내 주변 진료소 현황</string>
    <string name="vc_location_unknown">위치 정보를 알 수 없습니다. 기본위치로 설정합니다</string>
    <string name="vc_location_off">"위치"기능이 비활성화상태입니다. 기본위치로 설정합니다</string>

    <!-- toolbar -->
    <string name="bd_toolbar">자유게시판</string>
    <string name="toolbar_title_board_add">글 쓰기</string>

    <!-- progress -->
    <string name="progress_version">버전 확인 중…</string>
    <string name="progress_total">확진자 조회 중…</string>
    <string name="progress_city">시/도 정보 조회 중…</string>
    <string name="progress_vaccine">진료소 조회 중…</string>
    <string name="progress_search">검색 중…</string>
    <string name="progress_board_detail">게시글 조회 중…</string>

    <!-- information -->
    <string name="info_intro_title">안녕하세요!</string>
    <string name="info_intro_content">사용자들과 소통이 가능한 게시판과\n코로나 19에 대한 다양한 정보를 한곳에서\n확인할 수 있는 멀티 플랫폼 앱입니다</string>
    <string name="info_situation_board_title">상황판</string>
    <string name="info_situation_board_content">일일, 전체 감염현황과 현 위치 기반\n시/도 별 감염현황을 볼 수 있습니다</string>
    <string name="info_situation_board_append">(위치 기능이 비활성인 경우, "서울"로 고정됩니다)</string>
    <string name="info_vaccine_title">백신/진료소</string>
    <string name="info_vaccine_content">접종현황 및 주변 15km 이내에있는\n코로나19 선별진료소를 리스트 및 \n지도 형태로 볼 수 있습니다.</string>
    <string name="info_vaccine_append">(위치 기능이 비활성인 경우, "서울"로 고정됩니다)</string>
    <string name="info_news_title">실시간뉴스</string>
    <string name="info_news_content">코로나19 관련된 최신 뉴스를 표시하며\n각 뉴스를 터치하면 브라우저와 링크됩니다</string>
    <string name="info_news_append">(최상단에서 위로 스크롤하면 새로고침됩니다)</string>
    <string name="info_board_title">자유게시판</string>
    <string name="info_board_content">코로나19 관련 정보를 사람들과\n자유롭게 공유할 수 있습니다</string>
    <string name="info_board_append">(최상단에서 위로 스크롤하면 새로고침됩니다)</string>

    <!-- board list -->
    <string name="board_report_notice">이 게시글을 신고하시겠습니까?</string>
    <string name="board_delete_notice">이 게시글을 삭제하시겠습니까?</string>
    <string name="board_empty">게시글이 텅~ 비었네요</string>

    <!-- hint alert -->
    <string name="hint_title">제목</string>
    <string name="hint_content">내용을 입력해주세요</string>
    <string name="hint_nickname">닉네임</string>
    <string name="hint_password">비밀번호</string>

    <!-- validate alert -->
    <string name="validate_title">제목은 25자 이내로 작성해주세요</string>
    <string name="validate_content_board_add">내용은 250자 이내로 작성해주세요</string>
    <string name="validate_content_comment">내용은 100자 이내로 작성해주세요</string>
    <string name="validate_nickname">닉네임은 3 ~ 10자 사이로 작성해주세요</string>
    <string name="validate_password">비밀번호는 5 ~ 20자 이하로 작성해주세요</string>

    <!-- etc -->
    <string name="lorem_ipsum_long_text">나는 이웃 토끼, 나는 나는 덮어 봅니다. 위에도 없이 딴은 하늘에는 나는 노루, 풀이 별 위에 듯합니다. 어머님, 이네들은 별 릴케 듯합니다. 위에 하나에 내린 별 내일 계십니다. 마리아 파란 풀이 써 어머니, 같이 위에도 버리었습니다. 둘 위에 했던 봅니다. 언덕 새워 별 아이들의 까닭입니다.소녀들의 이름자 이름을 이름자를 말 하나에 까닭입니다. 이름과, 남은 하나에 봅니다. 이런 까닭이요, 없이 벌써 슬퍼하는 위에 별을 속의 듯합니다. 어머니, 계절이 비둘기, 가을 이네들은 거외다. 새워 멀듯이, 이름을 봅니다. 다하지 이름자 멀리 잔디가 못 차 비둘기, 그러나 버리었습니다. 까닭이요, 비둘기, 못 이름과 별이 별에도 이름과, 아직 계십니다. 하나 언덕 멀듯이, 이웃 너무나 까닭입니다. 멀듯이, 내린 사람들의 이름을 노루, 이름과 우는 아스라히 어머님, 거외다. 이름자 애기 밤이 마디씩 까닭이요, 토끼, 듯합니다. </string>
    <string name="network_fail_text">불러오기에\n실패했습니다…ㅠㅠ</string>
    <string name="network_fail_content">네트워크 연결 상태를 확인해주세요</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>