<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmentpager.VaccineFragment">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:padding="12dp"
            android:text="@string/info_vaccine_title"
            android:gravity="center"
            android:textSize="28sp"
            android:fontFamily="@font/nanumsquare_round_extra_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/img_vaccination"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0.2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/nanumsquare_round_bold"
                android:gravity="center"
                android:text="@string/info_vaccine_content" />
            <TextView
                android:id="@+id/tv_message_append"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_light_30"
                android:textSize="12sp"
                android:fontFamily="@font/nanumsquare_round_regular"
                android:gravity="center"
                android:text="@string/info_vaccine_append" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>