<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp"
            android:paddingBottom="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@color/side_header_background">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/side_header_desc"
                android:src="@drawable/ic_launcher_background"
                android:visibility="gone"
                tools:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/side_header_title"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:fontFamily="@font/nanumsquare_round_extra_bold"
                android:gravity="start|center_vertical"
                android:textSize="24sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/iv_nav_close"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/side_header_desc"
                android:src="@drawable/ic_baseline_close_24" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lo_notice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@color/side_contents_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <TextView
                android:id="@+id/tv_notice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nanumsquare_round_bold"
                android:text="@string/side_contents_notice_title"
                android:textColor="@color/black_light_30"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/iv_notice_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/side_contents_version_title"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:tint="@color/black_light_30"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lo_intro"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@color/side_contents_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:foreground="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/tv_intro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nanumsquare_round_bold"
                android:text="@string/side_contents_intro_title"
                android:textColor="@color/black_light_30"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/side_contents_version_title"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:tint="@color/black_light_30"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lo_version"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:focusable="true"
            android:clickable="true"
            android:background="@color/side_contents_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <TextView
                android:id="@+id/tv_version_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/nanumsquare_round_bold"
                android:text="@string/side_contents_version_title"
                android:textColor="@color/black_light_30"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black_light_30"
                android:textSize="16sp"
                tools:text="1.0.0"/>
            <ImageView
                android:id="@+id/iv_history_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/side_contents_version_title"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:tint="@color/black_light_30"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>
</layout>