<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VaccineFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/lo_swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/lo_total_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_campaign_24" />

                        <TextView
                            android:id="@+id/tv_daily_title"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/nanumsquare_round_extra_bold"
                            android:gravity="center_vertical"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:text="예방 접종 현황"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="bottom"
                            android:textColor="@color/pastel_strong_blue"
                            android:textSize="12sp"
                            tools:text="(2021.10.05 기준)" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lo_total_contents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="6dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:layout_weight="1"
                            android:background="@drawable/view_round_gray"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/vc_div" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="3dp"
                            android:layout_weight="1.33"
                            android:background="@drawable/view_round_light_green"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/vc_first_title" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_weight="1.33"
                            android:background="@drawable/view_round_light_green"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/vc_second_title" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:layout_weight="1.33"
                            android:background="@drawable/view_round_green"
                            android:gravity="center"
                            android:padding="6dp"
                            android:text="@string/vc_third_title" />
                    </LinearLayout>

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/view_round_table"
                        android:columnCount="4"
                        android:elevation="4dp"
                        android:orientation="horizontal"
                        android:rowCount="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="6dp"
                            android:fontFamily="@font/nanumsquare_round_extra_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:text="@string/vc_daily_total" />

                        <TextView
                            android:id="@+id/tv_first_total"
                            android:layout_width="0dp"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_columnWeight="1.33"
                            android:layout_marginEnd="3dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="40,764,241" />

                        <TextView
                            android:id="@+id/tv_second_total"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="35,975,412" />

                        <TextView
                            android:id="@+id/tv_third_total"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginStart="6dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="25,194" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="6dp"
                            android:fontFamily="@font/nanumsquare_round_extra_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:text="@string/vc_daily" />

                        <TextView
                            android:id="@+id/tv_first_daily"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginEnd="3dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="51,227" />

                        <TextView
                            android:id="@+id/tv_second_daily"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="332,557" />

                        <TextView
                            android:id="@+id/tv_third_daily"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginStart="6dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="492" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_columnWeight="1"
                            android:layout_marginEnd="6dp"
                            android:fontFamily="@font/nanumsquare_round_extra_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:text="@string/vc_yesterday_total" />

                        <TextView
                            android:id="@+id/tv_first_yesterday"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginEnd="3dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="40,713,014" />

                        <TextView
                            android:id="@+id/tv_second_yesterday"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="35,642,855" />

                        <TextView
                            android:id="@+id/tv_third_yesterday"
                            android:layout_width="0dp"
                            android:layout_columnWeight="1.33"
                            android:layout_marginStart="6dp"
                            android:fontFamily="@font/nanumsquare_round_bold"
                            android:gravity="center"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            tools:text="24,702" />
                    </GridLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>
</layout>